test/corpus/argument/range_expression.txt
==================================
range expression
==================================

A(x) :- x = range(-5, 10, 2).

----------------------------------

(source_file
 (rule
  (rule_head
   (atom
    (qualified_name
     (identifier))
    (argument
     (variable
      (identifier)))))
  (disjunction
   (conjunction
    (constraint
     (binary_constraint
      (argument
       (variable
        (identifier)))
      (argument
       (range_expression
        (argument
         (unary_operation
          (argument
           (constant
            (number)))))
        (argument
         (constant
          (number)))
        (argument
         (constant
          (number)))))))))))

==================================
range expression with float
==================================

A(x) :- x = range(-5, 10, 0.5).

----------------------------------

(source_file
 (rule
  (rule_head
   (atom
    (qualified_name
     (identifier))
    (argument
     (variable
      (identifier)))))
  (disjunction
   (conjunction
    (constraint
     (binary_constraint
      (argument
       (variable
        (identifier)))
      (argument
       (range_expression
        (argument
         (unary_operation
          (argument
           (constant
            (number)))))
        (argument
         (constant
          (number)))
        (argument
         (constant
          (number)))))))))))
