test/corpus/functor.txt
===============================
functor without arguments
===============================

.functor g():symbol

-------------------------------

(source_file
 (functor_decl
  (functor_kw)
  (identifier)
  (type_name
   (primitive_type))))


===============================
functor with one argument
===============================

.functor f(x:number):number

-------------------------------

(source_file
 (functor_decl
  (functor_kw)
  (identifier)
  (attribute
   (attribute_name)
   (type_name
    (primitive_type)))
  (type_name
   (primitive_type))))


===============================
functor with two arguments
===============================

.functor f(x:number, y: number):number

-------------------------------

(source_file
 (functor_decl
  (functor_kw)
  (identifier)
  (attribute
   (attribute_name)
   (type_name
    (primitive_type)))
  (attribute
   (attribute_name)
   (type_name
    (primitive_type)))
  (type_name
   (primitive_type))))


===============================
stateful functor
===============================

.functor f():number stateful

-------------------------------

(source_file
 (functor_decl
  (functor_kw)
  (identifier)
  (type_name
   (primitive_type))
  (stateful)))
