test/corpus/relation_decl/choice_domain.txt
====================================
choice-domain 1 single attribute
====================================

.decl SpanningTree(u: Node, v: Node) choice-domain u

---

(source_file
  (relation_decl
    (decl_kw)
    name: (identifier)
    (attribute
      name: (identifier)
      (type_name
        (user_defined_type_name
          (identifier))))
    (attribute
      name: (identifier)
      (type_name
        (user_defined_type_name
          (identifier))))
    (choice_domain
      (choice_domain_attribute
        (choice_domain_single_attribute)))))


====================================
choice-domain 2 single attributes
====================================

.decl Marriage(u: Person, v: Person) choice-domain u, v

---

(source_file
  (relation_decl
    (decl_kw)
    name: (identifier)
    (attribute
      name: (identifier)
      (type_name
        (user_defined_type_name
          (identifier))))
    (attribute
      name: (identifier)
      (type_name
        (user_defined_type_name
          (identifier))))
    (choice_domain
      (choice_domain_attribute
        (choice_domain_single_attribute))
      (choice_domain_attribute
        (choice_domain_single_attribute)))))


====================================
choice-domain 1 tuple attribute
====================================

.decl Rhombus(u: Node, v: Node, z: Node, t: Node) choice-domain (u, v)

---

(source_file
  (relation_decl
    (decl_kw)
    name: (identifier)
    (attribute
      name: (identifier)
      (type_name
        (user_defined_type_name
          (identifier))))
    (attribute
      name: (identifier)
      (type_name
        (user_defined_type_name
          (identifier))))
    (attribute
      name: (identifier)
      (type_name
        (user_defined_type_name
          (identifier))))
    (attribute
      name: (identifier)
      (type_name
        (user_defined_type_name
          (identifier))))
    (choice_domain
      (choice_domain_attribute
        (choice_domain_tuple_attribute
          (identifier)
          (identifier))))))


====================================
choice-domain 2 tuple attributes
====================================

.decl Rhombus(u: Node, v: Node, z: Node, t: Node) choice-domain (u, v), (z, t)

---

(source_file
  (relation_decl
    (decl_kw)
    name: (identifier)
    (attribute
      name: (identifier)
      (type_name
        (user_defined_type_name
          (identifier))))
    (attribute
      name: (identifier)
      (type_name
        (user_defined_type_name
          (identifier))))
    (attribute
      name: (identifier)
      (type_name
        (user_defined_type_name
          (identifier))))
    (attribute
      name: (identifier)
      (type_name
        (user_defined_type_name
          (identifier))))
    (choice_domain
      (choice_domain_attribute
        (choice_domain_tuple_attribute
          (identifier)
          (identifier)))
      (choice_domain_attribute
        (choice_domain_tuple_attribute
          (identifier)
          (identifier))))))
