test/corpus/relation_decl/relation_name.txt
====================================
single relation name
====================================

.decl Friendship(person_a: string, person_b: string)

---

(source_file
  (relation_decl
    (decl_kw)
    name: (identifier)
    (attribute
      (attribute_name)
      (type_name
        (user_defined_type_name
          (identifier))))
    (attribute
      (attribute_name)
      (type_name
        (user_defined_type_name
          (identifier))))))


====================================
multiple relation name
====================================

.decl Love, Hate(person_a: string, person_b: string)

---

(source_file
  (relation_decl
    (decl_kw)
    name: (identifier)
    name: (identifier)
    (attribute
      (attribute_name)
      (type_name
        (user_defined_type_name
          (identifier))))
    (attribute
      (attribute_name)
      (type_name
        (user_defined_type_name
          (identifier))))))
