test/corpus/relation_decl/relation_qualifier.txt
====================================
single relation_qualifier
====================================

.decl Greater(x: number, y: number) btree

---

(source_file
  (relation_decl
    (decl_kw)
    relation_name: (identifier)
    (attribute
      (attribute_name)
      (type_name
        (primitive_type)))
    (attribute
      (attribute_name)
      (type_name
        (primitive_type)))
    (relation_qualifier)))


====================================
multiple relation_qualifier
====================================

.decl Greater(x: number, y: number) btree

---

(source_file
  (relation_decl
    (decl_kw)
    relation_name: (identifier)
    (attribute
      (attribute_name)
      (type_name
        (primitive_type)))
    (attribute
      (attribute_name)
      (type_name
        (primitive_type)))
    (relation_qualifier)))
