test/corpus/rule/subsumption.txt
===================================
subsumption
===================================

A(x) <= A(y) :- x < y.

-----------------------------------

(source_file
 (rule
  (subsumption_head
   (atom
    (qualified_name
     (identifier))
    (argument
     (variable
      (identifier))))
   (atom
    (qualified_name
     (identifier))
    (argument
     (variable
      (identifier)))))
  (disjunction
   (conjunction
    (constraint
     (binary_constraint
      (argument
       (variable
        (identifier)))
      (argument
       (variable
        (identifier)))))))))
