test/corpus/type_decl/algebraic_data_type.txt
============================================
abstract data type
============================================

.type Tree = Empty {}
           | Node {t1: Tree, val: unsigned, t2: Tree}

--------------------------------------------

(source_file
 (type_decl
  (type_kw)
  (identifier)
  (eq_type_decl
   (abstract_data_type
    (adt_branch
     (identifier))
    (adt_branch
     (identifier)
     (attribute
      (attribute_name)
      (type_name
       (user_defined_type_name
        (identifier))))
     (attribute
      (attribute_name)
      (type_name
       (primitive_type)))
     (attribute
      (attribute_name)
      (type_name
       (user_defined_type_name
        (identifier)))))))))
