test/corpus/type_decl/record_type.txt
====================================
record type
====================================

.type Edge = [
    from: Node,
    to: Node,
    weight: number
]

---

(source_file
  (type_decl
    (type_kw)
    (identifier)
    (eq_type_decl
      (record_type
        (attribute
          (attribute_name)
          (type_name
            (user_defined_type_name
              (identifier))))
        (attribute
          (attribute_name)
          (type_name
            (user_defined_type_name
              (identifier))))
        (attribute
          (attribute_name)
          (type_name
            (primitive_type)))))))
